fix the testnet label alignment

--- a/interface/client/styles/networkIndicator.import.less
+++ b/interface/client/styles/networkIndicator.import.less
@@ -3,6 +3,7 @@
     top: 10px;
     right: 10px;
     left: 10px;
+    text-align: right;
     font-weight: 600;
     font-size: 80%;        
     opacity: 0.8;
